Fix image alignment for footer and opportunity icons

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,7 +36,6 @@ section {
 .site-footer {
   border-top      : solid 1px rgb(208, 208, 208);
   background-color: rgb(208, 208, 208);
-  padding-left    : 25px;
 
   h3 {
     //text-align: center;
@@ -62,6 +61,8 @@ section {
 
   .logo {
     height: 100px;
+    display: block;
+    margin: auto;
   }
 }
 
@@ -198,8 +199,10 @@ section {
 
 .opp-image {
   display: block;
+  margin: auto;
   width  : 150px;
   height : 150px;
+  padding-bottom: 20px;
 }
 
 // ----- Blog snippet ----------------------------------------------------------
